isba/isba-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ispa
  labels:
    app: ispa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ispa
    spec:
      containers:
      - name: ispa-app
        # Replace  with your project ID or use `make template`
        image: gcr.io/coherent-window-177723/isba
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
