isba/isba.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ispa-app
  labels:
    app: ispa-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ispa-app
    spec:
      containers:
      - image: gcr.io/rapid-smithy-177819/ispa
        name: ispa-app
        imagePullPolicy: Always
        command: /gunicorn.sh
        ports:
          - containerPort: 8080

      - image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=rapid-smithy-177819:us-central1:isbadbase=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
