isba/isba-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ispa-app
  labels:
    app: ispa-app
spec:
  type: LoadBalancer
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: ispa-app
