isba/isba-services.yml
apiVersion: v1
kind: Service
metadata:
  name: ispa
  labels:
    app: ispa
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ispa
