isba/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: isba-static-ip
spec:
  backend:
    serviceName: ispa-app
    servicePort: 80
